# CIMO

./: .gitignore  Makefile  README.md  certbot-renew.sh  docker-compose.yaml  nginx.conf  package-lock.json  prod_README.md  pyproject.toml  test_requests.sql
app/: config.py  database.py  exceptions.py  main.py  redis.py
app/admin/: views.py
app/chats/: dao.py  models.py  router.py  schemas.py
app/connection_requests/: dao.py  models.py
app/dao/: base.py  movie_base.py
app/favorites_movies/: models.py
app/messages/: dao.py  models.py  router.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 01357686092a_add_2_tables.py  1b1a58f316f8_update_users_table.py  335a53050e8f_update_tables.py  51d6d927e7af_add_9_tables.py  72675cd0a2d6_add_6_tables.py  95d5113db80b_update_table_session.py  9cde36df4946_update_relationships.py  ee9aaec226fa_add_time_columns.py
app/movie_roles/: dao.py  models.py  router.py  schemas.py
app/movies/: dao.py  models.py  router.py  schemas.py
app/people/: dao.py  models.py  router.py  schemas.py
app/saved_movies/: models.py
app/session_movies/: dao.py  models.py  router.py  schemas.py
app/sessions/: dao.py  dependencies.py  models.py  router.py  schemas.py
app/tasks/: celery.py  celeryconfig.py  email_templates.py  tasks.py
app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py  utils.py
app/viewed_movies/: dao.py  models.py  router.py  schemas.py
app/watch_later_movies/: dao.py  models.py  router.py  schemas.py
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml  pytest.ini
backend/app/: config.py  constants.py  database.py  exceptions.py  logger.py  main.py  utils.py
backend/app/admin/: auth.py  views.py
backend/app/chats/: dao.py  dependencies.py  models.py  router.py  schemas.py
backend/app/dao/: base.py  decorators.py  movie_base.py  utils.py
backend/app/messages/: dao.py  models.py  router.py  schemas.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 089697d626c0_add_column_is_matched.py  51d6d927e7af_add_9_tables.py  626f21526760_add_onboarding_bool_field.py  8507146d19fb_add_is_superuser_column.py  d46a0110228c_add_updated_at_column.py
backend/app/models/: __init__.py
backend/app/movie_roles/: dao.py  models.py  router.py
backend/app/movies/: dao.py  models.py  router.py  schemas.py
backend/app/people/: dao.py  router.py  schemas.py
backend/app/recommendation/: index.py  movie_cache_manager.py  service.py
backend/app/schemas/: base.py
backend/app/session_movies/: dao.py  router.py  schemas.py
backend/app/sessions/: dao.py  dependencies.py  models.py  redis_service.py  router.py  schemas.py
backend/app/tasks/: celery.py  email_templates.py  tasks.py
backend/app/tests/: conftest.py
backend/app/tests/integration_tests/: test_session_movies_api.py  test_sessions_api.py  test_users_api.py
backend/app/tests/prepared_data/: mock_chats.json  mock_messages.json  mock_movie_roles.json  mock_movies.json  mock_people.json  mock_session_movies.json  mock_sessions.json  mock_users.json  mock_viewed_movies.json  mock_watch_later_movies.json
backend/app/tests/unit_tests/: test_base_dao.py  test_messages_dao.py  test_movie_roles_dao.py  test_session_movies_dao.py  test_sessions_dao.py  test_users_dao.py  test_viewed_movies_dao.py  test_watch_later_movies_dao.py
backend/app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py  utils.py
backend/app/utils/: build_index.py  load_data.py
backend/app/viewed_movies/: dao.py  models.py  router.py  schemas.py
backend/app/watch_later_movies/: dao.py  router.py
backend/docker/: app.sh  load.sh  wait-for.sh
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.serve  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AuthForm.jsx  CancelButton.jsx  ChangeNicknameForm.jsx  CheckControlButton.jsx  CopyButton.jsx  DeleteButton.jsx  FinishSelectionButton.jsx  FinishSessionButton.jsx  Footer.jsx  Header.jsx  HeaderReg.jsx  Input.jsx  LikedMovieCard.jsx  LikedMoviesScroll.jsx  MovieDetailsModal.jsx  NicknameForm.jsx  Onboarding.jsx  PairModeCard.jsx  PasswordRecoveryForm.jsx  PasswordResetForm.jsx  ProfileAvatar.jsx  ProfileHeader.jsx  ProfileNavLink.jsx  RegisterForm.jsx  SecondaryButton.jsx  SingleModeCard.jsx  StartButton.jsx  SubmitButton.jsx  SwiperMovieCard.jsx  ToggleWatchLaterButton.jsx  UnwatchButton.jsx  VerificationCodeForm.jsx  WatchButton.jsx  WatchLaterAllButton.jsx  WatchLaterCard.jsx  WatchLaterScroll.jsx  WatchListCard.jsx  WatchListScroll.jsx  WatchedCard.jsx  WatchedScroll.jsx  (+1 more)
frontend/src/components/ActiveSession/: ActiveSession.jsx  ActiveSession.scss
frontend/src/components/ConfirmationModal/: ConfirmationModal.jsx  ConfirmationModal.scss
frontend/src/components/CountdownModal/: CountdownModal.jsx  CountdownModal.scss
frontend/src/components/Footer/: Footer.jsx  Footer.scss
frontend/src/components/Header/: Header.jsx  Header.scss
frontend/src/components/HeaderReg/: HeaderReg.jsx  HeaderReg.scss
frontend/src/components/LikedMovieCard/: LikedMovieCard.jsx  LikedMovieCard.scss
frontend/src/components/ModalSingle/: ModalSingle.jsx  ModalSingle.scss
frontend/src/components/MovieDetailsModal/: MovieDetailsModal.jsx  MovieDetailsModal.scss
frontend/src/components/PairModal/: PairModal.jsx  PairModal.scss
frontend/src/components/PeopleScroll/: PeopleScroll.jsx  PeopleScroll.scss
frontend/src/components/PersonCard/: PersonCard.jsx  PersonCard.scss
frontend/src/components/Q&A/: Q&A.jsx  Q&A.scss
frontend/src/components/RateMovieModal/: RateMovieModal.jsx  RateMovieModal.scss
frontend/src/components/WatchLaterCard/: WatchLaterCard.jsx  WatchLaterCard.scss
frontend/src/context/: WebSocketContext.jsx
frontend/src/pages/Invite/: Invite.jsx  (+1 more)
frontend/src/styles/: _global.scss  _variables.scss
frontend/src/utils/: authFetch.js  exceptions.js  useAuthFetch.js
notebooks/: prepare_analyse_dataset.ipynb  rec_sys.ipynb
(+30 files in other folders)
